force-app/main/default/objects/Knowledge__kav/fields/Announcement_No__c.field-meta.xml
<CustomField>
    <fullName>Announcement_No__c</fullName>
    <label>Announcement No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>