force-app/main/default/objects/Knowledge__kav/fields/Article_Type__c.field-meta.xml
<CustomField>
    <fullName>Article_Type__c</fullName>
    <label>Article Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCS Notice</fullName>
            </value>
            <value>
                <fullName>BPM-Airport Notice</fullName>
            </value>
            <value>
                <fullName>BPM-Company Policy Notice</fullName>
            </value>
            <value>
                <fullName>Customer Service Notice</fullName>
            </value>
            <value>
                <fullName>First Class Notice</fullName>
            </value>
            <value>
                <fullName>SVS Notice</fullName>
            </value>
            <value>
                <fullName>Topic Sharing</fullName>
            </value>
            <value>
                <fullName>BPM</fullName>
                <isActive>false</isActive>
                <label>BPM</label>
            </value>
            <value>
                <fullName>FCS Notice</fullName>
                <isActive>false</isActive>
                <label>FCS Notice</label>
            </value>
            <value>
                <fullName>Global Notice</fullName>
                <isActive>false</isActive>
                <label>Global Notice</label>
            </value>
            <value>
                <fullName>MMO</fullName>
                <isActive>false</isActive>
                <label>MMO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>