force-app/main/default/objects/Knowledge__kav/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Flag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS Annoucement</fullName>
            </value>
            <value>
                <fullName>New Event</fullName>
            </value>
            <value>
                <fullName>Policy for Reservation and Ticketing</fullName>
            </value>
            <value>
                <fullName>Policy for COSMILE Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>