force-app/main/default/objects/Knowledge__kav/recordTypes/B2B_Content.recordType-meta.xml
<RecordType>
    <fullName>B2B_Content</fullName>
    <active>true</active>
    <description>For B2B Articles</description>
    <label>B2B Content</label>
</RecordType>