force-app/main/default/objects/Knowledge__kav/recordTypes/Knowledge.recordType-meta.xml
<RecordType>
    <fullName>Knowledge</fullName>
    <active>true</active>
    <label>Knowledge</label>
</RecordType>