force-app/main/default/objects/Knowledge__kav/listViews/All_Article.listView-meta.xml
<ListView>
    <fullName>All_Article</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>RECORDTYPE</columns>
    <columns>URL_NAME</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1,2</value>
    </filters>
    <label>All Article</label>
</ListView>