force-app/main/default/objects/Knowledge__kav/listViews/All_Article_for_Admin.listView-meta.xml
<ListView>
    <fullName>All_Article_for_Admin</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>URL_NAME</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Article for Admin</label>
    <sharedTo>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>