force-app/main/default/objects/Knowledge__kav/listViews/CED_DefaultListView.listView-meta.xml
<ListView>
    <fullName>CED_DefaultListView</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>Content__c</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>OWNER_ID</columns>
    <columns>LANGUAGE</columns>
    <columns>ARTICLE_TOTAL_VIEW_COUNT</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Knowledge</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>zh_TW</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>TPE Customer Service</label>
    <sharedTo>
        <roleAndSubordinates>CC_Agent_HQ</roleAndSubordinates>
    </sharedTo>
</ListView>